Implemented controller, service for genre + tests
